--- a/views/logi1.ejs
+++ b/views/logi1.ejs
@@ -50,9 +50,9 @@ and-down">
 <label><h6 style="color: red;"><%= error %></h6></label>
 <label><h6 style="color: green;"><%= signUpSuccess %></h6></label><br/>
 <label><h6>Email</h6></label>
-<input type="text" name="email">
+<input type="text" name="email" required>
 <label><h6>Password</h6></label>
-<input type="password" name="password">
+<input type="password" name="password" required>
 <div class="center">
 <input type="submit" name="submit" value="submit" class="btn 
 brand z-depth-0">
